--- a/.github/workflows/aws1.yml
+++ b/.github/workflows/aws1.yml
@@ -47,7 +47,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    environment: prod
+    environment: production
 
     steps:
     - name: Checkout
